Add hr.po for RC branch thanks to zeljko2

--- a/po/hr.po
+++ b/po/hr.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-06-25 13:29+0200\n"
-"PO-Revision-Date: 2020-05-11 12:22+0200\n"
+"PO-Revision-Date: 2020-06-26 08:29+0200\n"
 "Last-Translator: Željko <zeljko2@hi.ht.hr>\n"
 "Language-Team: Željko\n"
 "Language: hr_HR\n"
@@ -243,7 +243,7 @@ msgstr "%d kB/s"
 msgid "%d min"
 msgstr "%d min"
 
-#, fuzzy, python-format
+#, python-format
 msgid "%d minute"
 msgid_plural "%d minutes"
 msgstr[0] "%d minuta"
@@ -566,23 +566,18 @@ msgstr "9"
 msgid ": 0000 - default (disabled)"
 msgstr ": 0000 - zadano (onemogućeno)"
 
-#, fuzzy
 msgid "< Current >"
 msgstr "< Trenutno >"
 
-#, fuzzy
 msgid "< Default + Picon >"
 msgstr "< Zadano + pikon >"
 
-#, fuzzy
 msgid "< Default >"
-msgstr "Zadano"
+msgstr "< Zadano >"
 
-#, fuzzy
 msgid "< Emergency >"
 msgstr "< Hitna pomoć >"
 
-#, fuzzy
 msgid "< Pending restart >"
 msgstr "< U tijeku je ponovno pokretanje >"
 
@@ -2682,7 +2677,6 @@ msgstr "Izbrišite unos s popisa za reprodukciju"
 msgid "Delete saved playlist"
 msgstr "Izbrišite spremljeni popis pjesama"
 
-#, fuzzy
 msgid "Delete the all the text"
 msgstr "Izbrišite sav tekst"
 
@@ -2980,9 +2974,8 @@ msgstr "Želite li izaći iz vodiča za skeniranje?"
 msgid "Do you want to reboot your receiver?"
 msgstr "Želite li ponovno pokrenuti prijemnik?"
 
-#, fuzzy
 msgid "Do you want to remove all the crash logfiles"
-msgstr "Želite li ukloniti sve datoteke dnevnika rušenja?"
+msgstr "Želite li ukloniti sve zapisnike pada sustava?"
 
 msgid "Do you want to remove the package:\n"
 msgstr "Želite li ukloniti paket:\n"
@@ -6356,9 +6349,9 @@ msgstr "Pritisnite MENU na daljinskom upravljaču za dodatne opcije."
 msgid "Press OK on your remote control to continue."
 msgstr "Pritisnite OK na daljinskom upravljaču za nastavak."
 
-#, fuzzy, python-format
+#, python-format
 msgid "Press OK to activate the selected%s skin."
-msgstr "Pritisnite OK za aktiviranje odabranog%s skina."
+msgstr "Pritisnite OK za aktiviranje odabranog %s skina."
 
 msgid "Press OK to activate the settings."
 msgstr "Pritisnite OK za aktiviranje postavki."
@@ -6370,9 +6363,9 @@ msgstr "Pritisnite OK za uređivanje postavki."
 msgid "Press OK to get further details for %s"
 msgstr "Pritisnite OK za dodatne pojedinosti za %s"
 
-#, fuzzy, python-format
+#, python-format
 msgid "Press OK to keep the currently selected%s skin."
-msgstr "Pritisnite OK za zadržavanje trenutno odabranog%s skina."
+msgstr "Pritisnite OK za zadržavanje trenutno odabranog %s skina."
 
 msgid "Press OK to scan"
 msgstr "Pritisnite OK za skeniranje"
@@ -7372,9 +7365,8 @@ msgstr "Odaberite film"
 msgid "Select a network adapter"
 msgstr "Odaberite mrežni adapter"
 
-#, fuzzy
 msgid "Select a skin"
-msgstr "Odaberite radnju"
+msgstr "Odaberite skin"
 
 msgid "Select a tuner"
 msgstr "Odaberite tjuner"
@@ -8622,9 +8614,8 @@ msgstr "Odabir podnaslova..."
 msgid "Subtitle settings"
 msgstr "Postavke titla"
 
-#, fuzzy
 msgid "Subtitle show/hide..."
-msgstr "Odabir podnaslova..."
+msgstr "Prikaži/sakrij titlove..."
 
 msgid "Subtitles"
 msgstr "Titlovi"
@@ -8632,13 +8623,11 @@ msgstr "Titlovi"
 msgid "Subtitles Settings"
 msgstr "Postavke titlova"
 
-#, fuzzy
 msgid "Subtitles disabled"
-msgstr "Postavke titlova"
+msgstr "Titlovi onemogućeni"
 
-#, fuzzy
 msgid "Subtitles enabled"
-msgstr "Ograničenje omogućeno"
+msgstr "Titlovi omogućeni"
 
 msgid "Succeeded:"
 msgstr "Uspješno:"
@@ -8694,17 +8683,14 @@ msgstr "Promijenite kanal prema dolje"
 msgid "Switch channel up"
 msgstr "Promijenite kanal prema gore"
 
-#, fuzzy
 msgid "Switch on the display during Standby Mode"
-msgstr "Isključite zaslon tijekom stanja čekanja"
+msgstr "Uključite zaslon tijekom stanja čekanja"
 
-#, fuzzy
 msgid "Switch on the display during Suspend Mode"
-msgstr "Isključite zaslon tijekom obustave"
+msgstr "Uključite zaslon tijekom obustave"
 
-#, fuzzy
 msgid "Switch on the display during operation."
-msgstr "Isključite zaslon tijekom rada."
+msgstr "Uključite zaslon tijekom rada."
 
 msgid "Switch to TV mode"
 msgstr "Prebacite se na TV način"
@@ -9407,11 +9393,10 @@ msgid "Toggle new text inserts before or overwrites existing text"
 msgstr "Prebacite nove tekstualne unose prije ili preko postojećeg teksta"
 
 msgid "Toggle show/hide"
-msgstr "Prebaci prikaži/sakrij"
+msgstr "Prebacite na Prikaži/sakrij"
 
-#, fuzzy
 msgid "Toggle subtitles show/hide"
-msgstr "Prebaci prikaži/sakrij"
+msgstr "Prebacivanje titlova u Prikaži/sakrij"
 
 msgid "Toggle the tv and the radio player..."
 msgstr "Prebacivanje između televizora i radio playera..."
@@ -10437,17 +10422,14 @@ msgstr "S pogreškama:"
 msgid "With popup"
 msgstr "S porukom"
 
-#, fuzzy
 msgid "With this option you can switch on the display during operation."
-msgstr "S ovom opcijom možete isključiti zaslon tijekom rada."
+msgstr "S ovom opcijom možete uključiti zaslon tijekom rada."
 
-#, fuzzy
 msgid "With this option you can switch on the display in Deep Standby Mode."
-msgstr "S ovom opcijom možete isključiti zaslon u načinu dubokog stanja čekanja."
+msgstr "S ovom opcijom možete uključiti zaslon u načinu dubokog stanja čekanja."
 
-#, fuzzy
 msgid "With this option you can switch on the display in Standby Mode."
-msgstr "S ovom opcijom možete isključiti zaslon u stanje čekanja."
+msgstr "S ovom opcijom možete uključiti zaslon u stanje čekanja."
 
 msgid "With this option you can switch the LED color or deactivate the LED."
 msgstr "Pomoću ove opcije možete promjeniti LED boju ili deaktivirati LED."
