--- a/po/ru.po
+++ b/po/ru.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-06-24 23:29+0200\n"
-"PO-Revision-Date: 2020-04-20 21:51+0300\n"
+"PO-Revision-Date: 2020-06-30 22:24+0300\n"
 "Last-Translator: Dimitrij <Dima-73@inbox.lv>\n"
 "Language-Team: openPLi Dimitrij\n"
 "Language: ru\n"
@@ -209,9 +209,9 @@ msgstr[2] "%d ядра"
 #, python-format
 msgid "%d day"
 msgid_plural "%d days"
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "%d день"
+msgstr[1] "%d дня"
+msgstr[2] "%d дней"
 
 #, python-format
 msgid "%d file"
@@ -250,7 +250,7 @@ msgstr "%d kB/s"
 msgid "%d min"
 msgstr "%d мин"
 
-#, fuzzy, python-format
+#, python-format
 msgid "%d minute"
 msgid_plural "%d minutes"
 msgstr[0] "%d минута"
@@ -2393,9 +2393,8 @@ msgstr "Cuba"
 msgid "Curacao"
 msgstr "Curacao"
 
-#, fuzzy
 msgid "Current"
-msgstr "< Текущий >"
+msgstr "Текущий"
 
 msgid "Current CEC address"
 msgstr "Текущий адрес CEC"
@@ -2582,9 +2581,8 @@ msgstr "Дефолтные настройки"
 msgid "Default timer type"
 msgstr "Тип таймера по дефолту"
 
-#, fuzzy
 msgid "Default+Picon"
-msgstr "<Дефолт + пикон >"
+msgstr "Дефолт+пикон"
 
 msgid "Define the location of the EPG Cache file."
 msgstr "Выбор расположения кеша EPG файла."
@@ -2658,9 +2656,8 @@ msgstr "Удалить"
 msgid "Delete Image"
 msgstr "Удалить имидж"
 
-#, fuzzy
 msgid "Delete all the text"
-msgstr "удалить запись из плейлиста"
+msgstr "удалить весь текст"
 
 msgid "Delete entry"
 msgstr "удалить выбранное"
@@ -3158,9 +3155,8 @@ msgstr "Электронный Программный Гид"
 msgid "Embedded"
 msgstr "Встроенные"
 
-#, fuzzy
 msgid "Emergency"
-msgstr "< Чрезвычайная ситуация >"
+msgstr "Аварийная ситуация"
 
 msgid "Empty slot"
 msgstr "Пустой слот"
@@ -5301,7 +5297,7 @@ msgid "Nameserver setup"
 msgstr "Настройка сервера имен (DNS)"
 
 msgid "Namespace & Orbital pos."
-msgstr "Пространство имен & Орбитальная позиция"
+msgstr "Namespace & Орбит. позиция"
 
 msgid "Namibia"
 msgstr "Namibia"
@@ -5873,9 +5869,8 @@ msgstr "Пауза воспроизведения"
 msgid "Pause/Continue playback"
 msgstr "Пауза/продолжение воспроизведение"
 
-#, fuzzy
 msgid "Pending restart"
-msgstr "< Ожидание рестарта >"
+msgstr "Ожидание рестарта"
 
 msgid "Percentage left"
 msgstr "Проценты слева"
@@ -6357,9 +6352,8 @@ msgstr "Нажмите кнопку MENU на Вашем пульте Д/У дл
 msgid "Press OK on your remote control to continue."
 msgstr "Нажмите ОК на Вашем пульте Д/У для продолжения."
 
-#, fuzzy, python-format
 msgid "Press OK to activate the selected %s skin."
-msgstr "Нажмите OK, для активации выбранного%s скина."
+msgstr "Нажмите OK, для активации выбранного %s скина."
 
 msgid "Press OK to activate the settings."
 msgstr "Нажмите OK для активации настроек."
@@ -6371,9 +6365,8 @@ msgstr "Нажмите OK, для измения настройки."
 msgid "Press OK to get further details for %s"
 msgstr "Нажмите ОК, чтобы получить подробную информацию для %s"
 
-#, fuzzy, python-format
 msgid "Press OK to keep the currently selected %s skin."
-msgstr "Нажмите OK, чтобы сохранить выбранный%s скин."
+msgstr "Нажмите OK, чтобы сохранить текущий выбранный скин %s скин."
 
 msgid "Press OK to scan"
 msgstr "Нажмите OK для сканирования."
@@ -8621,9 +8614,8 @@ msgstr "Выбор субтитров..."
 msgid "Subtitle settings"
 msgstr "Меню настройки субтитров"
 
-#, fuzzy
 msgid "Subtitle show/hide..."
-msgstr "Выбор субтитров..."
+msgstr "Субтитры показать/скрыть..."
 
 msgid "Subtitles"
 msgstr "Субтитры"
@@ -8631,13 +8623,11 @@ msgstr "Субтитры"
 msgid "Subtitles Settings"
 msgstr "Настройки субтитров"
 
-#, fuzzy
 msgid "Subtitles disabled"
-msgstr "Настройки субтитров"
+msgstr "Субтитры выключены"
 
-#, fuzzy
 msgid "Subtitles enabled"
-msgstr "Ограничения включены"
+msgstr "Субтитры включены"
 
 msgid "Succeeded:"
 msgstr "Успешных:"
@@ -9403,9 +9393,8 @@ msgstr "Переключить новые текстовые вставки до
 msgid "Toggle show/hide"
 msgstr "Переключатель показать/скрыть"
 
-#, fuzzy
 msgid "Toggle subtitles show/hide"
-msgstr "Переключатель показать/скрыть"
+msgstr "Переключатель субтитров показать/скрыть"
 
 msgid "Toggle the tv and the radio player..."
 msgstr "Переключение между тв и радио плеером..."
@@ -9739,9 +9728,8 @@ msgstr "Обновление каталога ПО"
 msgid "Upper case"
 msgstr "Верхний регистр"
 
-#, fuzzy
 msgid "Uptime"
-msgstr "Таймер сна"
+msgstr "Время работы"
 
 msgid "Uruguay"
 msgstr "Uruguay"
@@ -11823,3 +11811,9 @@ msgstr "переключено"
 
 msgid "®"
 msgstr "®"
+
+msgid "Show two lines per entry"
+msgstr "Использовать две строки в списке каналов"
+
+msgid "Show service name and event description among each other instead of side by side."
+msgstr "Показать название канала и описание события друг под другом, а не в одну строку."
