--- a/po/ru.po
+++ b/po/ru.po
@@ -1874,7 +1874,7 @@ msgid "Color format"
 msgstr "Формат цвета"
 
 msgid "Combined"
-msgstr "Комбинированный"
+msgstr "Комбо"
 
 msgid "Combo"
 msgstr "Combo"
