--- a/po/cs.po
+++ b/po/cs.po
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
-"X-Generator: Poedit 2.0.6\n"
+"X-Generator: Poedit 2.3.1\n"
 
 #
 msgid ""
@@ -9234,7 +9234,7 @@ msgid "Show service list"
 msgstr "Přehled programů"
 
 msgid "Show service name and event description among each other instead of side by side."
-msgstr ""
+msgstr "Zobrazuje název programu a popis události pod sebou místo vedle sebe."
 
 msgid "Show service type icons"
 msgstr "Zobrazovat ikony typu kanálu"
@@ -9276,7 +9276,7 @@ msgid "Show transponder info"
 msgstr "Zobrazit info o transpondéru"
 
 msgid "Show two lines per entry"
-msgstr ""
+msgstr "Zobrazovat položku na dva řádky"
 
 #
 msgid "Show underline characters in filenames"
@@ -10124,7 +10124,7 @@ msgstr ""
 "Pro případné korekce můžete kontaktovat autora\n"
 "na výše uvedené adrese.\n"
 "\n"
-"®25.6.2020"
+"®5.7.2020"
 
 #
 msgid "TS file is too large for ISO9660 level 1!"
