--- a/po/pl.po
+++ b/po/pl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-11-26 20:07+0100\n"
+"POT-Creation-Date: 2020-11-26 22:41+0100\n"
 "PO-Revision-Date: 2020-11-21 16:12+0100\n"
 "Last-Translator: blzr <blzr@o2.pl>\n"
 "Language-Team: \n"
@@ -3226,11 +3226,12 @@ msgstr "Włącz Virgin EPG"
 msgid "Enable auto cable scan"
 msgstr "Włącz automatyczny skan TV kablowej"
 
-msgid "Enable auto fast scan"
+#, fuzzy
+msgid "Enable auto fastscan"
 msgstr "Włącz automatyczny fast scan"
 
-#, python-format
-msgid "Enable auto fast scan for %s"
+#, fuzzy, python-format
+msgid "Enable auto fastscan for %s"
 msgstr "Włącz automatyczny fast scan dla %s"
 
 msgid "Enable bouquet edit"
@@ -3755,14 +3756,19 @@ msgstr "Szybko"
 msgid "Fast DiSEqC"
 msgstr "Szybki DiSEqC"
 
-msgid "Fast Scan"
-msgstr "Szybkie skanowanie"
-
 msgid "Fast epoch"
 msgstr "Szybkie odtwarzanie"
 
 msgid "Fast forward speeds"
 msgstr "Prędkości przewijania  w przód"
+
+#, fuzzy
+msgid "FastScan"
+msgstr "Szybkie skanowanie"
+
+#, fuzzy
+msgid "Fastscan"
+msgstr "Szybkie skanowanie"
 
 msgid "Favourites"
 msgstr "Ulubione"
