changed "Fast Scan" to "FastScan" (it is a brandname)

--- a/po/hu.po
+++ b/po/hu.po
@@ -3742,7 +3742,7 @@ msgstr "Előretekerési sebességek"
 msgid "FastScan"
 msgstr "Gyorskeresés"
 
-msgid "Fastscan"
+msgid "FastScan"
 msgstr "Gyorskeresés"
 
 msgid "Favourites"
