Delete duplicate lines in translations...

--- a/po/ca.po
+++ b/po/ca.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-11-27 17:04+0100\n"
+"POT-Creation-Date: 2020-12-01 09:48+0000\n"
 "PO-Revision-Date: 2020-07-08 18:12+0200\n"
 "Last-Translator: Oriol Pellicer <oriol@elsud.org>\n"
 "Language-Team: angelodos angelo2807@hotmail.com\n"
@@ -4180,6 +4180,10 @@ msgstr "Velocitats d’avanç ràpides"
 
 #, fuzzy
 msgid "FastScan"
+msgstr "Escaneig ràpid"
+
+#, fuzzy
+msgid "Fastscan"
 msgstr "Escaneig ràpid"
 
 #
@@ -9001,6 +9005,10 @@ msgstr "Mostra les icones del rellotge de registre"
 
 msgid "Show record indicator"
 msgstr "Mostra l’indicador de registre"
+
+#, fuzzy
+msgid "Show satellites list"
+msgstr "Mostra la llista de serveis"
 
 #, fuzzy
 msgid "Show screen path"
