Galician translation update

--- a/po/gl.po
+++ b/po/gl.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-02-17 20:18+0100\n"
-"PO-Revision-Date: 2021-02-06 18:51+0100\n"
+"PO-Revision-Date: 2021-02-20 15:57+0100\n"
 "Last-Translator: Luis A. Martínez <luis.a.martinez@gmail.com>\n"
 "Language-Team: LAMS\n"
 "Language: gl\n"
@@ -5614,12 +5614,11 @@ msgstr "Mayotte"
 msgid "Media player"
 msgstr "Reprodutor"
 
-#, fuzzy
 msgid "Media player: GStreamer, version "
-msgstr "Versión do GStreamer: "
+msgstr "Reprodutor multimedia: GStreamer, versión "
 
 msgid "Media player: ffmpeg, version "
-msgstr ""
+msgstr "Reprodutor multimedia: ffmpeg, versión "
 
 #
 msgid "Media scanner"
