--- a/po/gl.po
+++ b/po/gl.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-02-17 20:18+0100\n"
-"PO-Revision-Date: 2021-02-20 15:57+0100\n"
+"PO-Revision-Date: 2021-02-20 16:11+0100\n"
 "Last-Translator: Luis A. Martínez <luis.a.martinez@gmail.com>\n"
 "Language-Team: LAMS\n"
 "Language: gl\n"
@@ -3925,11 +3925,11 @@ msgid "Exit input device selection."
 msgstr "Saír da selección de dispositivo de entrada."
 
 msgid "Exit media player?"
-msgstr "Saír do reprodutor de medios?"
+msgstr "Saír do reprodutor multimedia?"
 
 #
 msgid "Exit mediaplayer"
-msgstr "Saír do reprodutor de medios"
+msgstr "Saír do reprodutor multimedia"
 
 #
 msgid "Exit movie list"
@@ -5612,7 +5612,7 @@ msgstr "Mayotte"
 
 #
 msgid "Media player"
-msgstr "Reprodutor"
+msgstr "Reprodutor multimedia"
 
 msgid "Media player: GStreamer, version "
 msgstr "Reprodutor multimedia: GStreamer, versión "
@@ -8940,7 +8940,7 @@ msgid "Show latest update log"
 msgstr "Amosar último rexistro de actualización"
 
 msgid "Show media player on main menu"
-msgstr "Amosar reprodutor de medios no menú principal"
+msgstr "Amosar reprodutor multimedia no menú principal"
 
 msgid "Show menu or plugin numbers"
 msgstr "Amosar números de menú ou complemento"
@@ -9599,7 +9599,7 @@ msgstr "Deter a proba"
 
 #
 msgid "Stop testing plane after # failed transponders"
-msgstr "Deter as probas despois de # transpordedores fallidos"
+msgstr "Deter as probas despois de # transpondedores fallidos"
 
 #
 msgid "Stop testing plane after # successful transponders"
@@ -10688,10 +10688,10 @@ msgstr "Verdadeiro"
 
 #
 msgid "Try to find used transponders in cable network.. please wait..."
-msgstr "Intenta atopar transponders en uso na rede de cable. Por favor, espera…"
+msgstr "Intenta atopar transpondedores en uso na rede de cable. Por favor, espera…"
 
 msgid "Try to find used transponders in terrestrial network... please wait..."
-msgstr "Intenta atopar transponders en uso na rede de terrestre. Por favor, espera…"
+msgstr "Intenta atopar transpondedores en uso na rede de terrestre. Por favor, espera…"
 
 #
 msgid "Trying to download a new packetlist. Please wait..."
