--- a/po/uk.po
+++ b/po/uk.po
@@ -18,7 +18,7 @@ msgid ""
 "After pressing OK, please wait!"
 msgstr ""
 "\n"
-"Після натискання ОК, зачекайте!"
+"Після натиснення OK, зачекайте!"
 
 msgid ""
 "\n"
@@ -32,20 +32,21 @@ msgid ""
 "Press OK on your remote control to continue."
 msgstr ""
 "\n"
-"Натисніть ОК на пульті для продовження."
+"Натисніть OK для продовження."
 
-#, fuzzy
 msgid ""
 "\n"
 "Press OK or Exit to abort!"
-msgstr "Натисніть OK для пошуку."
+msgstr ""
+"\n"
+"Натисніть OK для пошуку!"
 
 msgid ""
 "\n"
 "Recording in progress."
 msgstr ""
 "\n"
-"Запис триває."
+"Триває запис."
 
 #, python-format
 msgid ""
@@ -56,7 +57,7 @@ msgstr ""
 "Таймер '%s' відключений!"
 
 msgid " (0 - all networks)"
-msgstr "(0 - всі мережі)"
+msgstr " (0 - всі мережі)"
 
 #, python-format
 msgid " (Channel %s)"
@@ -64,10 +65,10 @@ msgstr " (Канал %s)"
 
 #, python-format
 msgid " (Partition %d)"
-msgstr "(Розділ% d)"
+msgstr " (Розділ %d)"
 
 msgid " (PiP)"
-msgstr " (PiP)"
+msgstr " (ПіП)"
 
 msgid " (Radio)"
 msgstr " (Радіо)"
@@ -76,23 +77,22 @@ msgid " (TV)"
 msgstr " (ТБ)"
 
 msgid " (disabled)"
-msgstr "(вимкнено)"
+msgstr " (вимкнуто)"
 
 msgid " (higher than any auto)"
-msgstr "(вище, ніж будь-який авто)"
+msgstr " (вище будь-якого авто)"
 
 msgid " (higher than rotor any auto)"
-msgstr "(вище, ніж ротор будь-якого авто)"
+msgstr " (вище, ніж ротор будь-якого авто)"
 
 msgid " (lower than any auto)"
-msgstr "(нижче будь-якого авто)"
+msgstr " (нижче будь-якого авто)"
 
 msgid " extensions."
 msgstr " доповнень."
 
-#, fuzzy
 msgid " min"
-msgstr "%d хв"
+msgstr " хв"
 
 msgid " ms"
 msgstr " мс"
@@ -101,19 +101,19 @@ msgid " packages selected."
 msgstr " пакетів вибрано."
 
 msgid " updates available."
-msgstr " доступних оновлень."
+msgstr " доступно оновлень."
 
 #, python-format
 msgid "%.0f GB"
-msgstr ""
+msgstr "%.0f ГБ"
 
 #, python-format
 msgid "%.0f MB"
-msgstr ""
+msgstr "%.0f МБ"
 
 #, python-format
 msgid "%.0f kB"
-msgstr ""
+msgstr "%.0f кБ"
 
 #, python-format
 msgid "%.1f° E"
@@ -125,7 +125,7 @@ msgstr ""
 
 #, python-format
 msgid "%.2f GB"
-msgstr ""
+msgstr "%.2f ГБ"
 
 #, python-format
 msgid "%02d:%02d"
@@ -133,11 +133,11 @@ msgstr "%2d:%02d"
 
 #, python-format
 msgid "%03d MB"
-msgstr ""
+msgstr "%03d MБ"
 
 #, python-format
 msgid "%2.1f sec"
-msgstr ""
+msgstr "%2.1f сек"
 
 #. TRANSLATORS: short time representation hour:minute
 #, python-format
@@ -168,9 +168,8 @@ msgid "%H:%M"
 msgstr "%H:%M"
 
 #. TRANSLATORS: full date representations short dayname daynum monthname long year in strftime() format! See 'man strftime'
-#, fuzzy
 msgid "%a %e %B %Y"
-msgstr "%A %e %B %Y"
+msgstr "%a %e %B %Y"
 
 #. TRANSLATORS: short date representation short dayname daynum short monthname in strftime() format! See 'man strftime'
 msgid "%a %e/%m"
@@ -186,18 +185,18 @@ msgstr ""
 
 #, python-format
 msgid "%d GB"
-msgstr ""
+msgstr "%d ГБ"
 
 #, python-format
 msgid "%d MB"
-msgstr ""
+msgstr "%d МБ"
 
 #. TRANSLATORS: Intermediate scanning result, '%d' channel(s) have been found so far
 #, python-format
 msgid "%d channel found"
 msgid_plural "%d channels found"
-msgstr[0] "%d канал знайдений"
-msgstr[1] "%d канала знайдено"
+msgstr[0] "%d канал знайдено"
+msgstr[1] "%d канали знайдено"
 msgstr[2] "%d каналів знайдено"
 
 #, python-format
@@ -221,37 +220,36 @@ msgstr[0] "%d файл"
 msgstr[1] "%d файла"
 msgstr[2] "%d файлів"
 
-#, fuzzy, python-format
+#, python-format
 msgid "%d fps"
-msgstr "%d файл"
+msgstr "%d fps"
 
 #, python-format
 msgid "%d hour"
 msgid_plural "%d hours"
 msgstr[0] "%d година"
-msgstr[1] "%d годин"
+msgstr[1] "%d години"
 msgstr[2] "%d годин"
 
 #, python-format
 msgid "%d job is running in the background!"
 msgid_plural "%d jobs are running in the background!"
-msgstr[0] "%d процес запущений у фоновому режимі!"
+msgstr[0] "%d процес запущено у фоновому режимі!"
 msgstr[1] "%d процеси запущено у фоновому режимі!"
 msgstr[2] "%d процесів запущено у фоновому режимі!"
 
 #, python-format
 msgid "%d kB"
-msgstr ""
+msgstr "%d кБ"
 
 #, python-format
 msgid "%d kB/s"
-msgstr ""
+msgstr "%d кБ/с"
 
 #, python-format
 msgid "%d min"
 msgstr "%d хв"
 
-#, fuzzy, python-format
 msgid "%d minute"
 msgid_plural "%d minutes"
 msgstr[0] "%d хвилина"
@@ -264,18 +262,18 @@ msgstr "%d хвилин"
 
 #, python-format
 msgid "%d ms"
-msgstr ""
+msgstr "%d мс"
 
 #, python-format
 msgid "%d pixel wide"
 msgid_plural "%d pixels wide"
-msgstr[0] "%d пікселів в ширину"
+msgstr[0] "%d піксель в ширину"
 msgstr[1] "%d пікселі в ширину"
-msgstr[2] "%d піксель в ширину"
+msgstr[2] "%d пікселів в ширину"
 
 #, python-format
 msgid "%d sec"
-msgstr ""
+msgstr "%d сек"
 
 #, python-format
 msgid "%d second"
@@ -294,8 +292,8 @@ msgstr[2] "%d директорій"
 #, python-format
 msgid "%d wireless network found!"
 msgid_plural "%d wireless networks found!"
-msgstr[0] "%d бездротова мережа знайдена!"
-msgstr[1] "%d бездротові мережі знайдені!"
+msgstr[0] "%d бездротову мережу знайдено!"
+msgstr[1] "%d бездротові мережі знайдено!"
 msgstr[2] "%d бездротових мереж знайдено!"
 
 msgid "%d-%m"
@@ -307,33 +305,29 @@ msgstr "%d.%02d. %02d:%02d"
 
 #, python-format
 msgid "%d.%03d GB"
-msgstr ""
+msgstr "%d.%03d ГБ"
 
 msgid "%d.%B %Y"
 msgstr "%d.%B %Y"
 
-#, fuzzy, python-format
 msgid "%d.%d"
-msgstr "%d.%B %Y"
+msgstr "%d.%d"
 
-#, fuzzy, python-format
 msgid "%d.%d.%d"
-msgstr "%d.%B %Y"
+msgstr "%d.%d.%d"
 
-#, fuzzy, python-format
 msgid "%d:%02d"
-msgstr "%2d:%02d"
+msgstr "%d:%02d"
 
 #. TRANSLATORS: VFD hour:minute daynum short monthname in strftime() format! See 'man strftime'
 msgid "%k:%M %e/%m"
 msgstr "%k:%M %e/%m"
 
-#, fuzzy, python-format
 msgid ""
 "%s\n"
 "Do you still want to flash image\n"
-"%s?"
-msgstr "Ви хочете це зробити?"
+"%s\n"
+msgstr "Ви хочете записати імідж\n"
 
 #, python-format
 msgid ""
@@ -356,23 +350,22 @@ msgstr "%s (%s)\n"
 
 #, python-format
 msgid "%s imported from fallback tuner"
-msgstr ""
+msgstr "%s імпортовані з резервного тюнера"
 
 #. TRANSLATORS: The satellite with name '%s' is no longer used after a configuration change. The user is asked whether or not the satellite should be deleted.
 #, python-format
 msgid "%s is no longer used. Should it be deleted?"
-msgstr "%s більше не використовується. Чи повинен він бути видалений?"
+msgstr "%s більше не використовується. Видалити його?"
 
 #, python-format
 msgid "%s updated package available"
 msgid_plural "%s updated packages available"
-msgstr[0] "%s оновлений пакет доступний"
-msgstr[1] "%s оновлених пакета доступно"
-msgstr[2] "%s оновлених пакетів доступно"
+msgstr[0] "%s оновлення пакету доступно"
+msgstr[1] "%s оновлення пакетів доступно"
+msgstr[2] "%s оновлень пакетів доступно"
 
-#, fuzzy, python-format
 msgid "%s%% Autoinstalling %s"
-msgstr "Інсталяція"
+msgstr "%s%% Автовстановлення %s"
 
 #, python-format
 msgid "%s%d min"
@@ -386,9 +379,8 @@ msgstr "%s/%s: %s"
 msgid "%s:%s"
 msgstr "%s:%s"
 
-#, fuzzy
 msgid "(VU+ type)"
-msgstr "DVB тип"
+msgstr "(тип VU+)"
 
 msgid "(ZAP as PiP)"
 msgstr ""
@@ -398,33 +390,32 @@ msgstr "(Перейти)"
 
 #, python-format
 msgid "(activated +%d min)"
-msgstr "(активоване +%d хв)"
+msgstr "(активовано +%d хв)"
 
 msgid "(empty)"
-msgstr "(пусто)"
+msgstr "(відсутній)"
 
 msgid "(not activated)"
 msgstr "(не активовано)"
 
 msgid "(show optional DVD audio menu)"
-msgstr "(показати опції. DVD аудіо меню)"
+msgstr "(показати додаткове DVD аудіо меню)"
 
-#, fuzzy
 msgid "(unknown)"
-msgstr "невідомий"
+msgstr "(невідомий)"
 
 msgid "* Only available if more than one interface is active."
-msgstr "* Доступно якщо активно більше одного інтерфейсу."
+msgstr "* Доступно, якщо більше ніж один інтерфейс активний."
 
 msgid "-NO SERVICE\n"
-msgstr ""
+msgstr "-НЕМАЄ КАНАЛІВ\n"
 
 #, python-format
 msgid "-SERVICE ERROR:%d\n"
-msgstr ""
+msgstr "-ПОМИЛКА КАНАЛУ:%d\n"
 
 msgid "/s"
-msgstr "/с"
+msgstr "/сек"
 
 msgid "0"
 msgstr "0"
@@ -9083,7 +9074,10 @@ msgstr ""
 
 #. TRANSLATORS: Add here whatever should be shown in the "translator" about screen, up to 6 lines (use \n for newline)
 msgid "TRANSLATOR_INFO"
-msgstr "vovan43 <vovan43@ex.ua>."
+msgstr ""
+"Переклад:  kvinto - 28.02.2021\n"
+"Сторінка:    https://gisclub.tv\n"
+"                  kvinto@rambler.ru"
 
 msgid "TS file is too large for ISO9660 level 1!"
 msgstr "TS файл занадто великий для ISO9660 level 1!"
