--- a/po/uk.po
+++ b/po/uk.po
@@ -1994,7 +1994,7 @@ msgid "Configure if behind the subtitles a background is shown."
 msgstr "Налаштування відображення фону позаду субтитрів."
 
 msgid "Configure if service picons will be shown in display (when supported by the skin)."
-msgstr ""
+msgstr "Вкажіть, чи відображати пікони каналів на дисплеї (якщо підтримується скіном)."
 
 msgid "Configure if service picons will be shown in the channel selection list."
 msgstr "Налаштування відображення піконів в списку каналів."
@@ -2452,7 +2452,7 @@ msgid "Customize"
 msgstr "Додаткові Налаштування"
 
 msgid "Customize OpenWebIF settings for fallback tuner"
-msgstr ""
+msgstr "Налаштуйте параметри OpenWebIF для резервного тюнера"
 
 msgid "Customize channel list cursor behavior"
 msgstr "Поведінка курсора списку каналів"
@@ -2474,6 +2474,597 @@ msgstr "Чешська"
 
 msgid "Czechia"
 msgstr "Чехія"
+
+msgid "D"
+msgstr "D"
+
+msgid "DAC"
+msgstr ""
+
+msgid "DHCP"
+msgstr "DHCP"
+
+msgid "DMM advanced"
+msgstr "DMM розширено"
+
+msgid "DMM normal"
+msgstr "DMM нормально"
+
+msgid "DTS downmix"
+msgstr "DTS мікшування"
+
+msgid "DUAL LAYER DVD"
+msgstr "Двошаровий DVD"
+
+msgid "DVB CI Delay"
+msgstr "Затримка DVB CI"
+
+msgid "DVB Subtitles PID & lang"
+msgstr "Субтитри DVB PID і мови"
+
+msgid "DVB driver version: "
+msgstr "DVB версія драйвера: "
+
+msgid "DVB subtitle black transparency"
+msgstr "Прозорість DVB субтитрів"
+
+msgid "DVB type"
+msgstr "DVB тип"
+
+msgid "DVB-C"
+msgstr "DVB-C"
+
+msgid "DVB-C ANNEX B"
+msgstr "DVB-C ANNEX B"
+
+msgid "DVB-C ANNEX C"
+msgstr "DVB-C ANNEX C"
+
+msgid "DVB-S"
+msgstr "DVB-S"
+
+msgid "DVB-S2"
+msgstr "DVB-S2"
+
+msgid "DVB-T"
+msgstr "DVB-T"
+
+msgid "DVB-T2"
+msgstr "DVB-T2"
+
+msgid "DVD Burn"
+msgstr "Запис DVD"
+
+msgid "DVD Menu"
+msgstr "DVD Меню"
+
+msgid "DVD data format"
+msgstr "Відеоформат DVD"
+
+msgid "DVD file browser"
+msgstr "DVD провідник файлів"
+
+msgid "DVD media toolbox"
+msgstr "DVD медіа-інструменти"
+
+msgid "DVD player"
+msgstr "DVD плеєр"
+
+msgid "DVD titlelist"
+msgstr "DVD титульний лист"
+
+msgid "DVDPlayer"
+msgstr "DVD-Програвач"
+
+msgid "Danish"
+msgstr "Данська"
+
+msgid "Date"
+msgstr "Дата"
+
+msgid "Date/time input"
+msgstr "Ввести дата/час"
+
+msgid "Debug to file"
+msgstr "Дані налагоджування в файл"
+
+msgid "Deep Standby LED"
+msgstr "LED в стані повного виключення"
+
+msgid "Deep standby"
+msgstr "Вимкнути приймач"
+
+msgid "Default"
+msgstr "За замовчуванням"
+
+msgid "Default Services Scanner"
+msgstr "Сканування Каналів за замовчуванням"
+
+msgid "Default movie location"
+msgstr "Розташування фільмів типово"
+
+msgid "Default settings"
+msgstr "Стандарні Налаштування"
+
+msgid "Default timer type"
+msgstr "Тип таймера за замовчуванням"
+
+msgid "Default+Picon"
+msgstr "За Замовчуванням+Пікон"
+
+msgid "Define the location of the EPG Cache file."
+msgstr "Вкажіть розташування файлу кешу EPG."
+
+msgid "Delay after change voltage before switch command"
+msgstr "Затримка після зміни напруги перед командою перемикання"
+
+msgid "Delay after continuous tone disable before diseqc"
+msgstr "Затримка після безперервного відключення тонової команди diseqc"
+
+msgid "Delay after diseqc peripherial poweron command"
+msgstr "Затримка після команди переключення напруги для diseqc"
+
+msgid "Delay after diseqc reset command"
+msgstr "Затримка після скидання команд diseqc"
+
+msgid "Delay after enable voltage before motor command"
+msgstr "Затримка після включення напруги перед командою двигуна"
+
+msgid "Delay after enable voltage before switch command"
+msgstr "Затримка після включення напруги перед командою перемикача"
+
+msgid "Delay after final continuous tone change"
+msgstr "Затримка після остаточної зміни безперервного тону"
+
+msgid "Delay after last diseqc command"
+msgstr "Затримка після останньої diseqc команди"
+
+msgid "Delay after last voltage change"
+msgstr "Затримка після останньої зміни напруги"
+
+msgid "Delay after motor stop command"
+msgstr "Затримка після команди зупинки двигуна"
+
+msgid "Delay after set voltage before measure motor power"
+msgstr "Затримка після заданої напруги перед вимірюванням потужності двигуна"
+
+msgid "Delay after toneburst"
+msgstr "Затримка після тональної команди"
+
+msgid "Delay after voltage change before motor command"
+msgstr "Затримка після зміни напруги перед командою двигуна"
+
+msgid "Delay before key repeat starts:"
+msgstr "Затримка перед повторним натисканням кнопки:"
+
+msgid "Delay before sequence repeat"
+msgstr "Затримка послідовності повтору"
+
+msgid "Delay between CEC commands when sending a series of commands. Some devices require this delay for correct functioning, usually between 50-150ms."
+msgstr "Затримка між командами CEC під час надсилання серії команд. Деякі пристрої вимагають цієї затримки для правильної роботи, як правило, від 50 до 150 мс."
+
+msgid "Delay between diseqc commands"
+msgstr "Затримка між командами DiSEqC"
+
+msgid "Delay between switch and motor command"
+msgstr "Затримка між командами перемикача і двигуна"
+
+msgid "Delay for external subtitles"
+msgstr "Затримка для зовнішніх субтитрів"
+
+msgid "Delay in miliseconds after finish scrolling text on display."
+msgstr "Затримка в мілісекундах після останньої прокрутки тексту на дисплеї."
+
+msgid "Delay in miliseconds before start of scrolling text on display."
+msgstr "Затримка в мілісекундах перед початком прокрутки тексту на дисплеї."
+
+msgid "Delay in miliseconds between scrolling characters on display."
+msgstr "Затримка в мілісекундах між прокруткою символів на дисплеї."
+
+msgid "Delete"
+msgstr "Видалити"
+
+msgid "Delete Image"
+msgstr "Видалити Імідж"
+
+msgid "Delete all the text"
+msgstr "Видалити весь текст"
+
+msgid "Delete entry"
+msgstr "Видалити запис"
+
+msgid "Delete failed!"
+msgstr "Видалення невдале!"
+
+msgid "Delete file"
+msgstr "Видалити файл"
+
+msgid "Delete image"
+msgstr "Видалення іміджу"
+
+msgid "Delete playlist entry"
+msgstr "Видалити запис з списку відтворення"
+
+msgid "Delete saved playlist"
+msgstr "Видалити збережений список відтворення"
+
+msgid "Delete the character to the left of text cursor"
+msgstr "Видалити символ ліворуч від текстового курсору"
+
+msgid "Delete the character under the text cursor"
+msgstr "Видалити символ під текстовим курсором"
+
+msgid "Delete timer"
+msgstr "Видалити таймер"
+
+msgid "Deleted"
+msgstr "Видалено"
+
+msgid "Deleted image"
+msgstr "Імідж видалено"
+
+msgid "Deleted items"
+msgstr "Видалені елементи"
+
+msgid "Denmark"
+msgstr "Данія"
+
+msgid "Depth"
+msgstr "Глибина"
+
+msgid "Descramble receiving http streams"
+msgstr "Розкодувати приймачем http-потоку"
+
+msgid "Descramble sending http streams"
+msgstr "Дешифрувати відправки HTTP потоків"
+
+msgid "Description"
+msgstr "Опис"
+
+msgid "Deselect"
+msgstr "Зняти виділення"
+
+msgid "Destination of fallback remote receiver"
+msgstr "Призначення віддаленого резервного приймача"
+
+msgid "Destination of fallback remote receiver for ATSC"
+msgstr "Призначення віддаленого резервного приймача для ATSC"
+
+msgid "Destination of fallback remote receiver for DVB-C"
+msgstr "Призначення віддаленого резервного приймача для DVB-C"
+
+msgid "Destination of fallback remote receiver for DVB-T"
+msgstr "Призначення віддаленого резервного приймача для DVB-T"
+
+msgid "Details for plugin: "
+msgstr "Деталі про плагін: "
+
+msgid "Detect next boxes before standby"
+msgstr "Виявити наступні приймачі перед вимкненням"
+
+msgid "Detected HDD:"
+msgstr "Виявлено HDD:"
+
+msgid "Detected NIMs:"
+msgstr "Виявлені тюнера:"
+
+msgid "Devicename:"
+msgstr "Назва пристрою:"
+
+msgid "DiSEqC"
+msgstr "DiSEqC"
+
+msgid "DiSEqC 1.0 command"
+msgstr "Команда DiSEqC 1.0"
+
+msgid "DiSEqC 1.1 command"
+msgstr "Команда DiSEqC 1.1"
+
+msgid "DiSEqC 1.1 repeats"
+msgstr "Повторення DiSEqC 1.1"
+
+msgid "DiSEqC A/B"
+msgstr "DiSEqC A/B"
+
+msgid "DiSEqC A/B/C/D"
+msgstr "DiSEqC A/B/C/D"
+
+msgid "DiSEqC Tester"
+msgstr "Тестер DiSEqC"
+
+msgid "DiSEqC mode"
+msgstr "DiSEqC режим"
+
+#, python-format
+msgid "DiSEqC port %s: %s"
+msgstr "DiSEqC порт %s: %s"
+
+msgid "DiSEqC-tester settings"
+msgstr "Налаштування DiSEqC-тестер"
+
+msgid "Did you see all eight arrow heads?"
+msgstr "Ви бачите всі вісім наконечників стріл?"
+
+msgid "Digital contour removal"
+msgstr "Видалення цифрового контуру"
+
+msgid "Direct playback of linked titles without menu"
+msgstr "Пряме програвання зв'язаних епізодів без меню"
+
+msgid "Directory"
+msgstr "Каталог"
+
+#, python-format
+msgid "Directory %s does not exist."
+msgstr "Каталогу %s не існує."
+
+msgid "Directory browser"
+msgstr "Провідник каталогів"
+
+#, python-format
+msgid "Directory contains %s and %s."
+msgstr "Директорія містить %s і %s."
+
+msgid "Disable"
+msgstr "Вимкнуто"
+
+msgid "Disable Picture in Picture"
+msgstr "Вимкнути РіР"
+
+msgid "Disable background scanning"
+msgstr "Вимкнути сканування у фоні"
+
+msgid "Disable current event but not coming events"
+msgstr "Вимкнути поточні події, але не майбутні події"
+
+msgid "Disable move mode"
+msgstr "Вимкнути режим переміщення"
+
+msgid "Disable timer"
+msgstr "Вимкнути таймер"
+
+msgid "Disabled"
+msgstr "Вимкнуто"
+
+msgid "Disk space to reserve for recordings (in GB)"
+msgstr "Зарезервувати дисковий простір для записів (у ГБ)"
+
+msgid "Display 16:9 content as"
+msgstr "Показувати 16:9 контент як"
+
+msgid "Display 4:3 content as"
+msgstr "Показувати 4:3 як"
+
+msgid "Display >16:9 content as"
+msgstr "Показувати >16:9 як"
+
+msgid "Display EPG as MultiEPG"
+msgstr "Відображати EPG як MultiEPG"
+
+msgid "Display EPG info for current event"
+msgstr "Відображення інформації про EPG для поточної передачі"
+
+msgid "Display EPG list for current channel"
+msgstr "Відображення списку EPG для поточного каналу"
+
+msgid "Display Skin"
+msgstr "Скін дисплея"
+
+msgid "Display and userinterface"
+msgstr "Екран і інтерфейс"
+
+msgid "Display message before playing next movie"
+msgstr "Показувати повідомлення перед відтворенням наступного запису"
+
+msgid "Display movie length in movielist (except single line style)."
+msgstr "Відображення тривалості запису у списку записів (крім однорядкового стилю)."
+
+msgid "Display setup"
+msgstr "Налаштування дисплея"
+
+msgid "Djibouti"
+msgstr "Джібутті"
+
+msgid "Do a cable service scan now"
+msgstr "Запустити сканування кабельних каналів"
+
+msgid "Do a fast service scan now"
+msgstr "Запустити швидке сканування каналів"
+
+msgid "Do a manual service scan now"
+msgstr "Запустити сканування каналів вручну"
+
+msgid "Do an automatic service scan now"
+msgstr "Запустити автоматичне сканування каналів"
+
+msgid "Do center DVB subs on this service"
+msgstr "Центрувати DVB subs на цьому каналі"
+
+msgid "Do not center DVB subs on this service"
+msgstr "Не центрувати DVB субтитри на цьому каналі"
+
+msgid "Do not change"
+msgstr "Не змінювати"
+
+msgid "Do not record"
+msgstr "Не записувати"
+
+msgid "Do not show file extensions for registered multimedia files."
+msgstr "Не показувати розширення файлів для зареєстрованих мультимедійних файлів."
+
+msgid "Do nothing"
+msgstr "Нічого не робити"
+
+msgid ""
+"Do you really want to check the filesystem?\n"
+"This could take lots of time!"
+msgstr ""
+"Дійсно хочете перевірити файлову систему?\n"
+"Це займе деякий час!"
+
+#, python-format
+msgid "Do you really want to delete %s?"
+msgstr "Ви дійсно хочете видалити %s?"
+
+#, python-format
+msgid ""
+"Do you really want to download\n"
+"the plugin \"%s\"?"
+msgstr ""
+"Ви дійсно бажаєте завантажити\n"
+"плагін \"%s\"?"
+
+msgid "Do you really want to exit?"
+msgstr "Ви дійсно хочете вийти?"
+
+msgid ""
+"Do you really want to initialize the device?\n"
+"All data on the disk will be lost!"
+msgstr ""
+"Ви дійсно хочете ініціалізувати пристрій?\n"
+"Всі дані на диску будуть втрачені!"
+
+#, python-format
+msgid ""
+"Do you really want to remove\n"
+"the plugin \"%s\"?"
+msgstr ""
+"Ви дійсно хочете видалити \n"
+"плагін \"%s\"?"
+
+#, python-format
+msgid "Do you really want to remove directory %s from the disk?"
+msgstr "Ви дійсно хочете видалити каталог %s з диску?"
+
+#, python-format
+msgid "Do you really want to remove your bookmark of %s?"
+msgstr "Ви дійсно хочете видалити Вашу закладку з %s?"
+
+msgid "Do you really want to stop current event and delete timer %s?"
+msgstr "Ви дійсно хочете зупинити поточне завдання та видалити таймер %s?"
+
+msgid "Do you want this?"
+msgstr "Ви хочете це зробити?"
+
+msgid "Do you want to autorestore settings?"
+msgstr "Ви хочете автоматично відновити настройки?"
+
+msgid "Do you want to burn this collection to DVD medium?"
+msgstr "Ви хочете записати цю колекцію на DVD диск?"
+
+msgid ""
+"Do you want to flash image\n"
+"%s"
+msgstr ""
+"Ви хочете прошити імідж\n"
+"%s"
+
+msgid "Do you want to install Plugins?"
+msgstr "Ви хочете встановити Плагіни?"
+
+msgid "Do you want to install a channel list?"
+msgstr "Ви хочете встановити спискок каналів?"
+
+msgid "Do you want to install the package:\n"
+msgstr "Ви хочете встановити пакет:\n"
+
+msgid "Do you want to play DVD in drive?"
+msgstr "Ви хочете відтворити DVD, який є в приводі?"
+
+msgid "Do you want to preview this DVD before burning?"
+msgstr "Ви хочете переглянути цей DVD перед записом?"
+
+msgid "Do you want to quit the overscan wizard?"
+msgstr "Ви хочете вийти з майстра сканування?"
+
+msgid "Do you want to reboot your receiver?"
+msgstr "Ви хочете перезавантажити приймач?"
+
+msgid "Do you want to remove all the crash logfiles"
+msgstr "Ви хочете видалити всі журнали збоїв"
+
+msgid "Do you want to remove the package:\n"
+msgstr "Ви хочете видалити пакет:\n"
+
+msgid "Do you want to restore your settings?"
+msgstr "Ви хочете відновити свої налаштування?"
+
+msgid "Do you want to resume this playback?"
+msgstr "Ви хочете продовжити відтворення?"
+
+msgid "Do you want to select a different skin?"
+msgstr "Ви хочете вибрати інший скін?"
+
+msgid "Do you want to update the package:\n"
+msgstr "Ви хочете оновити пакет::\n"
+
+#, python-format
+msgid "Do you want to update your receiver to %s?"
+msgstr "Ви хочете оновити приймач від %s?"
+
+msgid "Do you want to update your receiver?"
+msgstr "Ви хочете оновити ваш приймач?"
+
+msgid "Dolby"
+msgstr "Dolby"
+
+msgid "Dominica"
+msgstr "Домініка"
+
+msgid "Dominican Republic"
+msgstr "Домініканська республіка"
+
+msgid "Don't save and stop timeshift"
+msgstr "Ніколи не зберігати і не зупиняти таймшифт"
+
+msgid "Don't stop current event but disable coming events"
+msgstr "Не зупиняти поточне завдання, але скасувати наступні"
+
+msgid "Don't zap"
+msgstr "Не переключати"
+
+msgid "Don't zap and disable timer"
+msgstr "Не переключати і відключати таймер"
+
+msgid "Don't zap and remove timer"
+msgstr "Не переключати і видалити таймер"
+
+msgid "Done"
+msgstr "Виконано"
+
+#, python-format
+msgid "Done - Installed, updated or removed %d package (%s)"
+msgid_plural "Done - Installed, updated or removed %d packages (%s)"
+msgstr[0] "Виконано - Встановлено, оновлений, або видалений %d пакет (%s)"
+msgstr[1] "Виконано - Встановлено, оновлено, або видалено %d пакети (%s)"
+msgstr[2] "Виконано - Встановлено, оновлено, або видалено %d пакетів (%s)"
+
+msgid "Download plugins"
+msgstr "Завантажити плагіни"
+
+msgid "Downloadable new plugins"
+msgstr "Доступні нові плагіни"
+
+msgid "Downloadable plugins"
+msgstr "Доступні плагіни"
+
+msgid "Downloading"
+msgstr "Завантажується"
+
+msgid "Downloading Image"
+msgstr "Завантаження Іміджа"
+
+msgid "Downloading plugin information. Please wait..."
+msgstr "Завантаження інформації про додатки. Зачекайте..."
+
+msgid "Drop unconfigured satellites"
+msgstr "Видалити не налаштовані супутники"
+
+msgid "Dutch"
+msgstr "Голландська"
+
+msgid "Dynamic contrast"
+msgstr "Динамічний контраст"
 
 msgid "D"
 msgstr "D"
