Use StartEnigma name instead of Startup
- This is a better name as we're starting enigma not something else, Startup is very general and common as we may ask startup what?

- Add StartEnigma in debug lines so we understand StartEnigma is producing them.

- Correct all .po and other related .py files which advertise this file.

--- a/po/da.po
+++ b/po/da.po
@@ -10410,10 +10410,10 @@ msgstr "Brugerinterfacet på din modtager genstarter"
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 "Brugerinterfacet på din modtager genstarter\n"
-"på grund af en fejl i mytest.py"
+"på grund af en fejl i StartEnigma.py"
 
 #, fuzzy
 msgid "The user interface of your receiver is restarting in debug mode"
