--- a/po/el.po
+++ b/po/el.po
@@ -9056,10 +9056,10 @@ msgstr "Γίνεται επανεκκίνηση της διεπαφής χρήσ
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 "Γίνεται επανεκκίνηση της διεπαφής χρήστη του δέκτη σας\n"
-"εξαιτίας σφάλματος στο mytest.py"
+"εξαιτίας σφάλματος στο StartEnigma.py"
 
 msgid "The user interface of your receiver is restarting in debug mode"
 msgstr "Γίνεται επανεκκίνηση της διεπαφής χρήστη του δέκτη σας σε λειτουργία αποσφαλμάτωσης"
