--- a/po/fr.po
+++ b/po/fr.po
@@ -9055,10 +9055,10 @@ msgstr "L'interface utilisateur de votre récepteur redémarre"
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 "L'interface utilisateur de votre récepteur redémarre\n"
-"en raison d'une erreur dans mytest.py"
+"en raison d'une erreur dans StartEnigma.py"
 
 msgid "The user interface of your receiver is restarting in debug mode"
 msgstr "L'interface utilisateur de votre récepteur redémarre en mode déboggage"
