--- a/po/fy.po
+++ b/po/fy.po
@@ -10527,7 +10527,7 @@ msgstr "Wachtsje oant it netwurk opnei start is..."
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 
 #
