--- a/po/gl.po
+++ b/po/gl.po
@@ -10123,10 +10123,10 @@ msgstr "Está a reiniciarse a interface de usuario do receptor"
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 "Está a reiniciarse a interface de usuario do receptor\n"
-"debido a un erro en mytest.py"
+"debido a un erro en StartEnigma.py"
 
 #
 msgid "The user interface of your receiver is restarting in debug mode"
