--- a/po/ku.po
+++ b/po/ku.po
@@ -9198,10 +9198,10 @@ msgstr "The user interface of your receiver is restarting"
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 
 #, fuzzy
 msgid "The user interface of your receiver is restarting in debug mode"
