--- a/po/lv.po
+++ b/po/lv.po
@@ -9057,10 +9057,10 @@ msgstr "Uztvērēja lietotāja interfeiss tiek pārstartēts"
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 "Lietotāja interfeiss tiek pārstartēts\n"
-"dēļ kļūdas failā mytest.py"
+"dēļ kļūdas failā StartEnigma.py"
 
 msgid "The user interface of your receiver is restarting in debug mode"
 msgstr "Uztvērēja lietotāja interfeiss tiek pārstartēts testa režīmā"
