--- a/po/nl.po
+++ b/po/nl.po
@@ -9318,10 +9318,10 @@ msgstr "De gebruikersomgeving van uw ontvanger wordt herstart."
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 "De gebruikersomgeving van uw ontvanger wordt opnieuw opgestart\n"
-"als gevolg van een geconstateerd probleem in mytest.py"
+"als gevolg van een geconstateerd probleem in StartEnigma.py"
 
 msgid "The user interface of your receiver is restarting in debug mode"
 msgstr "De gebruikersomgeving van uw ontvanger wordt in debug modus herstart"
