--- a/po/ro.po
+++ b/po/ro.po
@@ -9380,7 +9380,7 @@ msgstr "Va rugam asteptati pana cand reteaua se va restarta..."
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 
 #, fuzzy
