--- a/po/sl.po
+++ b/po/sl.po
@@ -10600,10 +10600,10 @@ msgstr "Poteka ponovni zagon uporabniškega vmesnika (GUI) ..."
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 "Uporabniški vmesnik (GUI) sprejemnika se bo v kratkem ponovno zagnal!\n"
-"Razlog je napaka v datoteki mytest.py"
+"Razlog je napaka v datoteki StartEnigma.py"
 
 #, fuzzy
 msgid "The user interface of your receiver is restarting in debug mode"
