--- a/po/sr.po
+++ b/po/sr.po
@@ -10673,7 +10673,7 @@ msgstr "Molim sačekajte dok se vaša mreža ponovo startuje"
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 
 #
