--- a/po/ar.po
+++ b/po/ar.po
@@ -9706,7 +9706,7 @@ msgstr "جاري إعادة تشغيل واجهة المستخدم على %s %s 
 #, fuzzy
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 "جاري %s %s إعادة تشغيل واجهة المستخدم الخاصة\n"
 "هناك خطاء في ملف الاختبار.البايثون"
