--- a/po/ca.po
+++ b/po/ca.po
@@ -10130,10 +10130,10 @@ msgstr "S’inicia la interfície d’usuari del receptor"
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 "S’inicia la interfície d’usuari del receptor\n"
-"a causa d’un error a mytest.py"
+"a causa d’un error a StartEnigma.py"
 
 msgid "The user interface of your receiver is restarting in debug mode"
 msgstr "La interfície d’usuari del receptor es reinicia en mode de depuració"
