--- a/po/cs.po
+++ b/po/cs.po
@@ -10431,10 +10431,10 @@ msgstr "Uživatelské rozhraní se restartuje"
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 "Uživatelské rozhraní bylo restartováno\n"
-"kvůli chybě v mytest.py"
+"kvůli chybě v StartEnigma.py"
 
 msgid "The user interface of your receiver is restarting in debug mode"
 msgstr "Uživatelské rozhraní se restartuje v debug módu"
