--- a/po/de.po
+++ b/po/de.po
@@ -9071,10 +9071,10 @@ msgstr "Die Benutzeroberfläche des Receivers wird neu gestartet"
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 "Die Benutzeroberfläche des Receivers wird aufgrund eines Fehlers\n"
-"in mytest.py neu gestartet"
+"in StartEnigma.py neu gestartet"
 
 msgid "The user interface of your receiver is restarting in debug mode"
 msgstr "Die Benutzeroberfläche Ihres Empfängers wird im Debug-Modus neu gestartet"
