--- a/po/es.po
+++ b/po/es.po
@@ -10117,10 +10117,10 @@ msgstr "La interfaz de usuario de su receptor se está reiniciando"
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 "La interfaz de usuario de su receptor se está reiniciando\n"
-"Debido a un error en mytest.py"
+"Debido a un error en StartEnigma.py"
 
 #
 msgid "The user interface of your receiver is restarting in debug mode"
