--- a/po/et.po
+++ b/po/et.po
@@ -9155,10 +9155,10 @@ msgstr "Vastuvõtja kasutajaliides taaskäivitub."
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 "Vastuvõtja kasutajaliides taaskäivitub\n"
-" vea tõttu 'mytest.py' failis"
+" vea tõttu 'StartEnigma.py' failis"
 
 #, fuzzy
 msgid "The user interface of your receiver is restarting in debug mode"
