--- a/po/fi.po
+++ b/po/fi.po
@@ -10217,10 +10217,10 @@ msgstr "Vastaanottimesi käyttöliittymä käynnistyy uudelleen"
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 "Vastaanottimesi käyttöliittymä käynnistyy uudelleen\n"
-"johtuen virheestä mytest.py tiedostossa"
+"johtuen virheestä StartEnigma.py tiedostossa"
 
 msgid "The user interface of your receiver is restarting in debug mode"
 msgstr "Vastaanottimesi käyttöliittymä käynnistyy uudelleen debug tilaan"
