--- a/po/he.po
+++ b/po/he.po
@@ -9918,7 +9918,7 @@ msgstr "...נא המתן בעת איתחול הרשת"
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 
 #, fuzzy
