--- a/po/hr.po
+++ b/po/hr.po
@@ -9070,10 +9070,10 @@ msgstr "Korisničko sučelje vašeg prijemnika se ponovno pokreće."
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 "Korisničko sučelje vašeg prijemnika se ponovno pokreće\n"
-"zbog pogreške u mytest.py"
+"zbog pogreške u StartEnigma.py"
 
 msgid "The user interface of your receiver is restarting in debug mode"
 msgstr "Korisničko sučelje vašeg prijemnika ponovno se pokreće u načinu za otklanjanje pogrešaka"
