--- a/po/hu.po
+++ b/po/hu.po
@@ -9051,10 +9051,10 @@ msgstr "A kezelőfelület újraindítása folyamatban van"
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 "A kezelőfelület újraindítása folyamatban van\n"
-"a mytest.py fájlban lévő hiba miatt"
+"a StartEnigma.py fájlban lévő hiba miatt"
 
 msgid "The user interface of your receiver is restarting in debug mode"
 msgstr "A kezelőfelület hibakeresési módban indul újra"
