--- a/po/id.po
+++ b/po/id.po
@@ -9334,10 +9334,10 @@ msgstr "Antarmuka pengguna rx anda sedang memulai ulang"
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 "Antarmuka pengguna rx anda sedang memulai ulang\n"
-"disebabkan kesalahan pada berkas mytest.py"
+"disebabkan kesalahan pada berkas StartEnigma.py"
 
 #, fuzzy
 msgid "The user interface of your receiver is restarting in debug mode"
