--- a/po/is.po
+++ b/po/is.po
@@ -10355,7 +10355,7 @@ msgstr "Vinsamlega bíðið á meðan netkerfið er endurræst..."
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 
 #
