--- a/po/it.po
+++ b/po/it.po
@@ -9108,10 +9108,10 @@ msgstr "Riavvio dell'interfaccia utente del ricevitore in corso..."
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 "L'interfaccia utente del ricevitore si sta riavviando\n"
-"a causa di un errore in mytest.py"
+"a causa di un errore in StartEnigma.py"
 
 msgid "The user interface of your receiver is restarting in debug mode"
 msgstr "L'interfaccia utente del ricevitore si riavvia in modalità debug"
