--- a/po/lt.po
+++ b/po/lt.po
@@ -9069,10 +9069,10 @@ msgstr "Vartotojo grafinė aplinka paleidžiama iš naujo"
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 "Vartotojo grafinė aplinka bus paleista iš naujo\n"
-"dėl klaidos mytest.py"
+"dėl klaidos StartEnigma.py"
 
 msgid "The user interface of your receiver is restarting in debug mode"
 msgstr "Jūsų imtuvo vartotojo sąsaja paleidžiama iš naujo derinimo režimu"
