--- a/po/mk.po
+++ b/po/mk.po
@@ -9038,10 +9038,10 @@ msgstr "Корисничкиот интерфејс на вашиот прием
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 "Корисничкиот интерфејс на вашиот приемник се рестартира\n"
-"поради грешка во mytest.py"
+"поради грешка во StartEnigma.py"
 
 msgid "The user interface of your receiver is restarting in debug mode"
 msgstr "Корисничкиот интерфејс на вашиот приемник ќе се рестартира во режим на отстранување грешки"
