--- a/po/nb.po
+++ b/po/nb.po
@@ -10078,10 +10078,10 @@ msgstr "Brukergrensesnittet til mottakeren starter på nytt"
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 "Brukergrensesnittet til mottakeren starter på nytt\n"
-"på grunn av en feil i mytest.py"
+"på grunn av en feil i StartEnigma.py"
 
 msgid "The user interface of your receiver is restarting in debug mode"
 msgstr "Brukergrensesnittet til mottakeren starter på nytt i feilsøkingsmodus"
