--- a/po/nn.po
+++ b/po/nn.po
@@ -10032,10 +10032,10 @@ msgstr "Enigma2 starter på nytt"
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 "Mottakerens brukergrensesnitt må startes på nytt\n"
-"på grunn av en feil i mytest.py"
+"på grunn av en feil i StartEnigma.py"
 
 #, fuzzy
 msgid "The user interface of your receiver is restarting in debug mode"
