--- a/po/pl.po
+++ b/po/pl.po
@@ -9069,10 +9069,10 @@ msgstr "Trwa restart GUI odbiornika"
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 "Trwa restart GUI odbiornika\n"
-"z powodu błędu w mytest.py"
+"z powodu błędu w StartEnigma.py"
 
 msgid "The user interface of your receiver is restarting in debug mode"
 msgstr "GUI odbiornika jest restartowane do trybu debugowania"
