--- a/po/pt.po
+++ b/po/pt.po
@@ -10626,10 +10626,10 @@ msgstr "O interface gráfico está a reiniciar"
 #, fuzzy
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 "O interface gráfico está a reiniciar\n"
-"devido a um erro em mytest.py"
+"devido a um erro em StartEnigma.py"
 
 #, fuzzy
 msgid "The user interface of your receiver is restarting in debug mode"
