--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -9188,10 +9188,10 @@ msgstr "Reiniciando interface. Aguarde..."
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 "A interface do receptor está reiniciando\n"
-"devido a um erro em mytest.py"
+"devido a um erro em StartEnigma.py"
 
 #, fuzzy
 msgid "The user interface of your receiver is restarting in debug mode"
