--- a/po/ru.po
+++ b/po/ru.po
@@ -9066,10 +9066,10 @@ msgstr "Рестарт GUI Вашего ресивера"
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 "Рестарт GUI Вашего ресивера\n"
-"из-за ошибки в mytest.py"
+"из-за ошибки в StartEnigma.py"
 
 msgid "The user interface of your receiver is restarting in debug mode"
 msgstr "Рестарт GUI Вашего ресивера выполнен для режима отладки"
