--- a/po/sk.po
+++ b/po/sk.po
@@ -9066,10 +9066,10 @@ msgstr "Užívateľské rozhranie prijímača sa reštartuje..."
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 "Užívateľské rozhranie vášho prijímača sa reštartuje\n"
-"kvôli chybe v mytest.py"
+"kvôli chybe v StartEnigma.py"
 
 msgid "The user interface of your receiver is restarting in debug mode"
 msgstr "Užívateľské rozhranie prijímača sa reštartuje v debug režime..."
