--- a/po/sv.po
+++ b/po/sv.po
@@ -10373,10 +10373,10 @@ msgstr "Användargränssnittet för din mottagare startas om"
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 "Användargränssnittet för din mottagare startas om\n"
-"på grund av ett fel i mytest.py"
+"på grund av ett fel i StartEnigma.py"
 
 #, fuzzy
 msgid "The user interface of your receiver is restarting in debug mode"
