--- a/po/tr.po
+++ b/po/tr.po
@@ -9235,9 +9235,9 @@ msgstr "Alıcınızın kullanıcı arayüzü yeniden başlatılıyor..."
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
-"mytest.py deki bir hata nedeniyle\n"
+"StartEnigma.py deki bir hata nedeniyle\n"
 "Alıcınızın kullanıcı arayüzü yeniden başlatılıyor..."
 
 #, fuzzy
