--- a/po/vi.po
+++ b/po/vi.po
@@ -9112,10 +9112,10 @@ msgstr "Giao diện người dùng của máy thu của bạn đang khởi độ
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 "Giao diện người dùng của máy thu của bạn đang khởi động lại\n"
-"do lỗi trong mytest.py"
+"do lỗi trong StartEnigma.py"
 
 msgid "The user interface of your receiver is restarting in debug mode"
 msgstr "Giao diện người dùng của máy thu của bạn đang khởi động lại ở chế độ gỡ lỗi"
