--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -9053,10 +9053,10 @@ msgstr "接收机用户界面正在重启中!"
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 "接收机用户界面重启中\n"
-"在mytest.py文件中存在一处错误"
+"在StartEnigma.py文件中存在一处错误"
 
 msgid "The user interface of your receiver is restarting in debug mode"
 msgstr "接收器的用户界面正在调试模式下重新启动"
