--- a/po/zh_HK.po
+++ b/po/zh_HK.po
@@ -9122,7 +9122,7 @@ msgstr ""
 
 msgid ""
 "The user interface of your receiver is restarting\n"
-"due to an error in mytest.py"
+"due to an error in StartEnigma.py"
 msgstr ""
 
 msgid "The user interface of your receiver is restarting in debug mode"
