Update po files using updateallpo-multiOS.sh

--- a/po/lv.po
+++ b/po/lv.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-03-08 22:56+0200\n"
+"POT-Creation-Date: 2021-04-16 16:28+0430\n"
 "PO-Revision-Date: 2014-11-12 00:49+0200\n"
 "Last-Translator: Taapat <taapat@gmail.com>\n"
 "Language-Team: Taapat <taapat@gmail.com>\n"
@@ -1429,6 +1429,12 @@ msgstr "Melns ekrāns"
 
 msgid "Black screen till locked"
 msgstr "Melns ekrāns līdz noenkurojies"
+
+msgid "Blindscan"
+msgstr ""
+
+msgid "Blindscan terrestrial (if possible)"
+msgstr ""
 
 msgid "Block noise reduction"
 msgstr "Bloķēt trokšņu slāpēšanu"
@@ -3176,6 +3182,10 @@ msgstr "Iekšējais"
 msgid "Emergency"
 msgstr "Noklusētais"
 
+#, fuzzy
+msgid "Empty Trash"
+msgstr "Tukšs slots"
+
 msgid "Empty slot"
 msgstr "Tukšs slots"
 
@@ -4102,8 +4112,8 @@ msgstr "HD saraksts"
 msgid "HD2400"
 msgstr "HD2400"
 
-msgid "HD60"
-msgstr "HD60"
+msgid "HD60/Multibox/Multibox SE"
+msgstr ""
 
 msgid "HDMI"
 msgstr "HDMI"
@@ -4281,6 +4291,10 @@ msgstr "I"
 
 msgid "I do not want to perform any service scans"
 msgstr "Es nevēlos veikt kanālu meklēšanu"
+
+#, fuzzy
+msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
+msgstr "Zgemma H7(jaunais modelis)/H9(jaunais modelis)/H9COMBO/H9TWIN/H10"
 
 msgid "IDLE"
 msgstr "NEIZMANTOTS"
@@ -9817,7 +9831,8 @@ msgstr "Atjauno programmatūras katalogu"
 msgid "Upper case"
 msgstr "Lieli burti"
 
-msgid "Uptime"
+#, fuzzy, python-format
+msgid "Uptime: %s\n"
 msgstr "Darbojas"
 
 msgid "Uruguay"
@@ -10884,9 +10899,6 @@ msgstr "Pārslēdz uz taimera kanālu %s!"
 
 msgid "Zgemma H.S/H.2S/H.2H/H5/H7(old model)"
 msgstr "Zgemma H.S/H.2S/H.2H/H5/H7(vecais modelis)"
-
-msgid "Zgemma H7(new model)/H9(new model)/H9COMBO/H9TWIN/H10"
-msgstr "Zgemma H7(jaunais modelis)/H9(jaunais modelis)/H9COMBO/H9TWIN/H10"
 
 msgid "Zgemma H9(old model)/I55Plus"
 msgstr "Zgemma H9(vecais modelis)/I55Plus"
