--- a/po/ru.po
+++ b/po/ru.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-02-17 20:18+0100\n"
+"POT-Creation-Date: 2021-04-19 10:48+0430\n"
 "PO-Revision-Date: 2021-02-01 18:13+0200\n"
 "Last-Translator: Dimitrij <Dima-73@inbox.lv>\n"
 "Language-Team: openPLi Dimitrij\n"
@@ -985,12 +985,6 @@ msgstr "Также из режима ожидания"
 msgid "Alternative"
 msgstr "Альтернатива"
 
-msgid "Alternative 1"
-msgstr "Альтернатива 1"
-
-msgid "Alternative 2"
-msgstr "Альтернатива 2"
-
 msgid "Alternative URL for images listed on FlashImage"
 msgstr "Альтернативный URL для списка имиджей онлайн прошивки"
 
@@ -1432,6 +1426,12 @@ msgstr "Черный экран"
 
 msgid "Black screen till locked"
 msgstr "Черный экран до разблокировки"
+
+msgid "Blindscan"
+msgstr "Слепое сканирование"
+
+msgid "Blindscan terrestrial (if possible)"
+msgstr "Наземное слепое сканирование (по возможности)"
 
 msgid "Block noise reduction"
 msgstr "Понижение блочных шумов"
@@ -3179,6 +3179,10 @@ msgstr "Встроенные"
 msgid "Emergency"
 msgstr "Аварийная ситуация"
 
+#, fuzzy
+msgid "Empty Trash"
+msgstr "Пустой слот"
+
 msgid "Empty slot"
 msgstr "Пустой слот"
 
@@ -4105,8 +4109,8 @@ msgstr "HD лист"
 msgid "HD2400"
 msgstr "HD2400"
 
-msgid "HD60"
-msgstr "HD60"
+msgid "HD60/Multibox/Multibox SE"
+msgstr ""
 
 msgid "HDMI"
 msgstr "HDMI"
@@ -4284,6 +4288,10 @@ msgstr "I"
 
 msgid "I do not want to perform any service scans"
 msgstr "Я не хочу выполнять никакое сканирование"
+
+#, fuzzy
+msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
+msgstr "Zgemma H7(новая модель)/H9(новая модель)/H9COMBO/H9TWIN/H10"
 
 msgid "IDLE"
 msgstr "БЕЗДЕЙСТВИЕ"
@@ -9826,7 +9834,8 @@ msgstr "Обновление каталога ПО"
 msgid "Upper case"
 msgstr "Верхний регистр"
 
-msgid "Uptime"
+#, fuzzy, python-format
+msgid "Uptime: %s\n"
 msgstr "Время работы"
 
 msgid "Uruguay"
@@ -10893,9 +10902,6 @@ msgstr "Таймер - переключено на сервис %s!"
 msgid "Zgemma H.S/H.2S/H.2H/H5/H7(old model)"
 msgstr "Zgemma H.S/H.2S/H.2H/H5/H7(старая модель)"
 
-msgid "Zgemma H7(new model)/H9(new model)/H9COMBO/H9TWIN/H10"
-msgstr "Zgemma H7(новая модель)/H9(новая модель)/H9COMBO/H9TWIN/H10"
-
 msgid "Zgemma H9(old model)/I55Plus"
 msgstr "Zgemma H9(старая модель)/i55 Plus"
 
@@ -11942,10 +11948,3 @@ msgstr "переключено"
 
 msgid "®"
 msgstr "®"
-
-msgid "Blindscan"
-msgstr "Слепое сканирование"
-
-msgid "Blindscan terrestrial (if possible)"
-msgstr "Наземное слепое сканирование (по возможности)"
-
