--- a/po/ru.po
+++ b/po/ru.po
@@ -3179,9 +3179,8 @@ msgstr "Встроенные"
 msgid "Emergency"
 msgstr "Аварийная ситуация"
 
-#, fuzzy
 msgid "Empty Trash"
-msgstr "Пустой слот"
+msgstr "Пустая корзина"
 
 msgid "Empty slot"
 msgstr "Пустой слот"
@@ -4110,7 +4109,7 @@ msgid "HD2400"
 msgstr "HD2400"
 
 msgid "HD60/Multibox/Multibox SE"
-msgstr ""
+msgstr "HD60/Multibox/Multibox SE"
 
 msgid "HDMI"
 msgstr "HDMI"
@@ -4289,9 +4288,8 @@ msgstr "I"
 msgid "I do not want to perform any service scans"
 msgstr "Я не хочу выполнять никакое сканирование"
 
-#, fuzzy
 msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
-msgstr "Zgemma H7(новая модель)/H9(новая модель)/H9COMBO/H9TWIN/H10"
+msgstr "I55SE/H7(новая модель)/H9(новая модель)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
 
 msgid "IDLE"
 msgstr "БЕЗДЕЙСТВИЕ"
@@ -9834,9 +9832,8 @@ msgstr "Обновление каталога ПО"
 msgid "Upper case"
 msgstr "Верхний регистр"
 
-#, fuzzy, python-format
 msgid "Uptime: %s\n"
-msgstr "Время работы"
+msgstr "Время работы: %s\n"
 
 msgid "Uruguay"
 msgstr "Uruguay"
